sass/base/_common.scss
// body
body {
  background-color: $primary-white-color;
  color: $primary-black-color;
  font-family: $primary-font;
  letter-spacing: 0.03em;
}
// h
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}
// p
p {
  margin: 0;
}
// ul
.list {
  list-style: none;
  margin: 0;
  padding: 0;
}
// a
.link {
  display: block;
  text-decoration: none;
  font-style: normal;
}
// img
.img-responsive {
  display: block;
  max-width: 100%;
  height: auto;
}

